# unii

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml
src/: config.rs  course.rs  error.rs  lib.rs  main.rs  note.rs  settings.rs
src/course/: list.rs  mod.rs  new.rs  tests.rs  types.rs
src/template/: list.rs  mod.rs  new.rs  render.rs  run.rs  types.rs
src/template/types/: file_tree.rs  mod.rs
