[package]
name = "unii"
version = "0.1.0"
edition = "2021"
authors = ["Vidhan Bhatt <me@vidhan.io>", "Kevin Huang <wozeparrot@gmail.com>"]
description = "A university work management tool."
homepage = "https://github.com/vidhanio/unii"
repository = "https://github.com/vidhanio/unii"
license = "AGPL-3.0"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.20", features = ["derive"] }
color-eyre = "0.6.2"
dirs = "4.0.0"
once_cell = "1.14.0"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_regex = "1.1.0"
thiserror = "1.0.34"
toml = "0.5.9"
url = { version = "2.3.1", features = ["serde"] }
