[package]
name = "unii"
version = "0.1.0"
edition = "2021"
authors = ["Vidhan Bhatt <me@vidhan.io>"]
description = "A university work management tool."
homepage = "https://github.com/vidhanio/unii"
repository = "https://github.com/vidhanio/unii"
license = "AGPL-3.0"
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
color-eyre = "0.6.2"
dirs = "4.0.0"
once_cell = "1.15.0"
regex = "1.6.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_regex = "1.1.0"
thiserror = "1.0.37"
toml = "0.5.9"
url = { version = "2.3.1", features = ["serde"] }
