[package]
name = "unii"
version = "0.1.0"
edition = "2021"
authors = ["Vidhan Bhatt <me@vidhan.io>"]
description = "A university work management tool."
homepage = "https://github.com/vidhanio/unii"
repository = "https://github.com/vidhanio/unii"
license = "AGPL-3.0"
categories = ["command-line-utilities"]
keywords = ["cli", "work", "command-line"]


[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
config = "0.13"
dirs = "5"
heck = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tera = "1"
thiserror = "1"
